docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/http/original_src/v3/original_src.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/original_src/v3/original_src.proto:

Original Src Filter
===================

Use the Original source address on upstream connections.

.. _envoy_v3_api_msg_extensions.filters.http.original_src.v3.OriginalSrc:

extensions.filters.http.original_src.v3.OriginalSrc
---------------------------------------------------

`[extensions.filters.http.original_src.v3.OriginalSrc proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/original_src/v3/original_src.proto#L19>`_

The Original Src filter binds upstream connections to the original source address determined
for the request. This address could come from something like the Proxy Protocol filter, or it
could come from trusted http headers.

.. _extension_envoy.filters.http.original_src:


This extension may be referenced by the qualified name *envoy.filters.http.original_src*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

.. code-block:: json

  {
    "mark": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.original_src.v3.OriginalSrc.mark:

mark
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sets the SO_MARK option on the upstream connection's socket to the provided value. Used to
  ensure that non-local addresses may be routed back through envoy when binding to the original
  source address. The option will not be applied if the mark is 0.
  
  

